--- a/fotowoltaika/src/app/navbar/navbar.component.html
+++ b/fotowoltaika/src/app/navbar/navbar.component.html
@@ -1,1 +1,31 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <div class="container-fluid">
+    <a class="navbar-brand" routerLink="/home">Fotowoltaika</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" routerLink="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="/votings">Mapa</a>
+        </li>
+      </ul>
+
+
+      <form class="d-flex">
+        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+
+      <button *ngIf="!isUserLogin; else loggedOut" class="nav-link" (click)="login()">LogIn</button>
+
+      <ng-template #loggedOut>
+        <button class="nav-link" (click)="logout()">LogOut</button>
+      </ng-template>
+
+    </div>
+  </div>
+</nav>
