--- a/fotowoltaika/src/app/home-page/home-page.component.html
+++ b/fotowoltaika/src/app/home-page/home-page.component.html
@@ -1,1 +1,2 @@
-<p>home-page works!</p>
+<p>Mapa</p>
+<canvas id="myCanvas" width="500px" height="500px" style="border:1px solid #000000;"></canvas>
